<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.owner.assignment6_favcontacts.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="113dp"
        android:text="Favorite Contacts"
        android:textAppearance="@android:style/TextAppearance.Large" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton"
            style="@style/Widget.AppCompat.ImageButton"
            android:layout_width="97dp"
            android:layout_height="102dp"
            android:layout_weight=".25"
            app:srcCompat="@mipmap/me_and_j" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="5dp"
            android:layout_height="52dp"
            android:layout_weight="1"
            android:text="@string/fav1" />

        <TextView
            android:layout_width="117dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/fav1_number" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Select a message: "
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spin1Texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/texts" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button1Call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Call" />

        <Button
            android:id="@+id/button1Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="352dp"
        android:layout_height="80dp"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton2"
            android:layout_width="79dp"
            android:layout_height="100dp"
            android:layout_weight="1"
            app:srcCompat="@mipmap/ic_launcher_foreground" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="74dp"
            android:layout_height="62dp"
            android:layout_weight="1"
            android:text="@string/fav2" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/fav2_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="Select a message: "
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spin2Texts"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/texts" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2Call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Call" />

        <Button
            android:id="@+id/button2Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/imageButton3"
            android:layout_width="73dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            app:srcCompat="@mipmap/gramma" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="39dp"
            android:layout_height="84dp"
            android:layout_weight="1"
            android:text="@string/fav3" />

        <TextView
            android:layout_width="98dp"
            android:layout_height="wrap_content"
            android:layout_weight=".25"
            android:text="@string/fav3_number" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="10dp">

        <TextView
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Select a message: "
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium" />

        <Spinner
            android:id="@+id/spin3Texts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:dropDownWidth="match_parent"
            android:entries="@array/texts" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button3Call"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Call" />

        <Button
            android:id="@+id/button3Text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Text" />

    </LinearLayout>

</LinearLayout>
